koomgr/yaml/dev/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: koo-system
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: koo-mutating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXRENDQWtBQ0NRQzg1SHZHS3Z1d2pEQU5CZ2txaGtpRzl3MEJBUXNGQURCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSmxNUll3RkFZRFZRUUxEQTFKVkNCRVpYQmhjblJ0Wlc1ME1ROHdEUVlEVlFRRERBWnJiMjl0ClozSXdIaGNOTWpBd05ESXdNVEl4TkRFM1doY05NekF3TkRFNE1USXhOREUzV2pCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSm [...]
    url: https://koomgr:9443/mutate-directory-koobind-io-v1alpha1-user
  failurePolicy: Fail
  name: muser.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXRENDQWtBQ0NRQzg1SHZHS3Z1d2pEQU5CZ2txaGtpRzl3MEJBUXNGQURCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSmxNUll3RkFZRFZRUUxEQTFKVkNCRVpYQmhjblJ0Wlc1ME1ROHdEUVlEVlFRRERBWnJiMjl0ClozSXdIaGNOTWpBd05ESXdNVEl4TkRFM1doY05NekF3TkRFNE1USXhOREUzV2pCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSm [...]
    url: https://koomgr:9443/mutate-directory-koobind-io-v1alpha1-group
  failurePolicy: Fail
  name: mgroup.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXRENDQWtBQ0NRQzg1SHZHS3Z1d2pEQU5CZ2txaGtpRzl3MEJBUXNGQURCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSmxNUll3RkFZRFZRUUxEQTFKVkNCRVpYQmhjblJ0Wlc1ME1ROHdEUVlEVlFRRERBWnJiMjl0ClozSXdIaGNOTWpBd05ESXdNVEl4TkRFM1doY05NekF3TkRFNE1USXhOREUzV2pCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSm [...]
    url: https://koomgr:9443/mutate-directory-koobind-io-v1alpha1-binding
  failurePolicy: Fail
  name: mbinding.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bindings
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: koo-validating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXRENDQWtBQ0NRQzg1SHZHS3Z1d2pEQU5CZ2txaGtpRzl3MEJBUXNGQURCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSmxNUll3RkFZRFZRUUxEQTFKVkNCRVpYQmhjblJ0Wlc1ME1ROHdEUVlEVlFRRERBWnJiMjl0ClozSXdIaGNOTWpBd05ESXdNVEl4TkRFM1doY05NekF3TkRFNE1USXhOREUzV2pCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSm [...]
    url: https://koomgr:9443/validate-directory-koobind-io-v1alpha1-user
  failurePolicy: Fail
  name: vuser.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXRENDQWtBQ0NRQzg1SHZHS3Z1d2pEQU5CZ2txaGtpRzl3MEJBUXNGQURCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSmxNUll3RkFZRFZRUUxEQTFKVkNCRVpYQmhjblJ0Wlc1ME1ROHdEUVlEVlFRRERBWnJiMjl0ClozSXdIaGNOTWpBd05ESXdNVEl4TkRFM1doY05NekF3TkRFNE1USXhOREUzV2pCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSm [...]
    url: https://koomgr:9443/validate-directory-koobind-io-v1alpha1-group
  failurePolicy: Fail
  name: vgroup.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXRENDQWtBQ0NRQzg1SHZHS3Z1d2pEQU5CZ2txaGtpRzl3MEJBUXNGQURCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSmxNUll3RkFZRFZRUUxEQTFKVkNCRVpYQmhjblJ0Wlc1ME1ROHdEUVlEVlFRRERBWnJiMjl0ClozSXdIaGNOTWpBd05ESXdNVEl4TkRFM1doY05NekF3TkRFNE1USXhOREUzV2pCdU1Rc3dDUVlEVlFRR0V3SkcKVWpFT01Bd0dBMVVFQ0F3RlVHRnlhWE14RGpBTUJnTlZCQWNNQlZCaGNtbHpNUll3RkFZRFZRUUtEQTFDVWs5QgpSRk52Wm5SM1lYSm [...]
    url: https://koomgr:9443/validate-directory-koobind-io-v1alpha1-binding
  failurePolicy: Fail
  name: vbinding.kb.io
  rules:
  - apiGroups:
    - directory.koobind.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - bindings
